--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.22.1",
+    "@testing-library/react-native": "^12.4.3",
     "react": "18.2.0",
     "react-native": "0.73.4"
   },
