--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@react-native-async-storage/async-storage": "^1.22.1",
     "@testing-library/react-native": "^12.4.3",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-native": "0.73.4",
+    "react-native-dropdown-select-list": "^2.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
