--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.22.1",
+    "@react-navigation/bottom-tabs": "^6.5.12",
+    "@react-navigation/native": "^6.1.10",
+    "@react-navigation/native-stack": "^6.9.18",
     "@testing-library/react-native": "^12.4.3",
     "react": "18.2.0",
     "react-native": "0.73.4",
-    "react-native-dropdown-select-list": "^2.0.5"
+    "react-native-dropdown-select-list": "^2.0.5",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.29.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
